--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Clonar repositório
         uses: actions/checkout@v2
 
-      - name: Instalar Snk
+      - name: Gerar Snake
         uses: platane/snk@v2
         with:
           github_user_name: 5kr1pt
@@ -24,7 +24,10 @@ jobs:
       - name: Commit e push da animação
         uses: EndBug/add-and-commit@v9
         with:
-          commit_message: "Atualiza snake.svg"
+          # Parâmetro correto é "message" (não "commit_message")
+          message: "Atualiza snake.svg"
           add: "dist/snake.svg"
+          # Se quiser "forçar" o push (cuidado ao usar), pode adicionar:
+          # push_options: --force
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
